[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "the_one_api_sdk_swilson"
authors = [
  { name="Steven Wilson", email="wilson.stvn@gmail.com" },
]
description = "An sdk for using the one api."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
"Homepage" = "https://github.com/comradequestion/steven_wilson-sdk"
